implemented session_id properly histrory on the chatbot interactions pydantic objects session_id gets sent in json request

--- a/app/notebooks/test_functionality.ipynb
+++ b/app/notebooks/test_functionality.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In programming's dance of loops,\n",
-      "Lies a step called recursion, a timeless booth,\n",
-      "A function calling itself, spinning round,\n",
-      "With elegance and mystery profound.\n",
-      "Through its looking glass, an enchanting sight,\n",
-      "Solving problems with recursive might.\n",
-      "Yet tread with caution, for depth you'll climb,\n",
-      "A poetic cycle, limitless, sublime.\n"
+      "In code's embrace, a loop unbroken,\n",
+      "Through code's path, a tale awoken.\n",
+      "Recursion, a spellbinding dance,\n",
+      "Whispered secrets, a mystic trance.\n",
+      "A function, its own creator,\n",
+      "Calls upon itself, a daring traitor.\n",
+      "Layers upon layers, a code's obsession,\n",
+      "A puzzle solved by this endless procession.\n"
      ]
     }
    ],
